--- a/libsmtp/CHANGES
+++ b/libsmtp/CHANGES
@@ -1,3 +1,7 @@
+0.7.8 * Included MIME support. You can choose a MIME type for your body
+
+      * Many new functions concerning MIME support added
+
 0.7.7 * This is a total rewrite :)
 
       * Everything is better now. You should love each other *g
