--- a/libsmtp/README
+++ b/libsmtp/README
@@ -1,9 +1,12 @@
 
 This is a small C library that allow direct SMTP connections conforming to
 RFC 822. It is designed for security and simplicity. It is a complete
-rewrite of libsmtp-0.7.5, and bears no similarity to it.
+rewrite of libsmtp-0.7.5, and bears no similarity to it. Libsmtp is designed
+to be small enough to be used in an embedded environment, and flexible
+enough to be used as underlying communications infrastructure even for MTAs
+(though it is still a bit away from that goal at the moment).
 
-You can find updates at http://libsmtp.berlios.de
+You can find updates at http://developer.berlios.de/projects/libsmtp/
 
 Please note that this a development version. The next stable release will be
 0.8. libsmtp-0.7.5 and below are deprecated.
