--- a/libsmtp/INSTALL
+++ b/libsmtp/INSTALL
@@ -1,14 +1,20 @@
 
-I think autoconf is above me. For now, you'll have to do the following steps
-to compile:
+I think autoconf is above me. If anybody can help me with this, I might send
+him some non-virtual beer!! I must admit I'm far too lazy to get myself
+mired in autoconf docs at the moment. For now, you'll have to do the following
+steps to compile libsmtp:
 
 1) ./configure
    Ignore all the error messages :)
 
-2) cd src
+2) cd smtp
 
 3) make
    Hold your breath now...
+
+4) cd ../mime
+
+5) make
 
 Now its up to you to do the rest, like copying the library to anyplace where
 its useful, i.e. /usr/lib. The "testapp" application demonstrates the use of
@@ -17,4 +23,9 @@ your mail will just be rejected. You can send to the addresses that are
 preconfigured in testapp.c if you like, they are sorted by my procmail and
 get thrown away, so don't worry. If you like, you can set a funny email (or
 your email address) in the From:-field, and my procmail script will save
-them. :)
+them. Maybe I'll create a gallery someday :)
+
+The mimetest and multiparttest are demo apps for the new MIME stuff in
+libsmtp. They work for me, but might blow your coffee machine against your
+invaluable tea china. Well I never! Please bear in mind that the MIME stuff
+is developmental code.
