--- a/libsmtp/README
+++ b/libsmtp/README
@@ -4,19 +4,21 @@ RFC 822. It is designed for security and simplicity. It is a complete
 rewrite of libsmtp-0.7.5, and bears no similarity to it. Libsmtp is designed
 to be small enough to be used in an embedded environment, and flexible
 enough to be used as underlying communications infrastructure even for MTAs
-(though it is still a bit away from that goal at the moment).
+(though it is still a bit away from that goal at the moment). It is
+licensed under the LGPL, which means it can be used in closed source
+programs, too.
 
-You can find updates at http://developer.berlios.de/projects/libsmtp/
+You can find updates at http://libsmtp.berlios.de
 
 Please note that this a development version. The next stable release will be
 0.8. libsmtp-0.7.5 and below are deprecated.
 
-See the file doc/API for programming information. The source code and the
-test application are quite freely documented, too. Any patches, bug reports and
-fixes and general comments welcome. Mailing list, forum, patch manager etc. are
-at http://developer.berlios.de/projects/libsmtp/
+See the file doc/API and doc/MIME for programming information. The source code
+and the test application are quite freely documented, too. Any patches, bug
+reports and fixes and general comments welcome. Mailing list, forum, patch
+manager etc. are at http://developer.berlios.de/projects/libsmtp/
 
-Berlios is great!! Its sorta like sourceforge.net, but I like it when it
+Berlios is great!! Its sorta like sourceforge.net, but I like it because it
 isn't so crowded :)
 
 Kevin <obsidian@berlios.de>
