--- a/libsmtp/CHANGES
+++ b/libsmtp/CHANGES
@@ -1,3 +1,10 @@
+0.7.9 * Base64 and Quoted Printable encoding added
+
+      * Attachment description is included now, too
+
+      * Updated documentation
+
+
 0.7.8 * Included MIME support. You can choose a MIME type for your body
 
       * Many new functions concerning MIME support added
@@ -5,9 +12,9 @@
       * MIME stuff still not quite reliable. Limitations: can't encode in
         base64 or quoted printable ATM. Please read doc/MIME.
 
-0.7.7 * This is a total rewrite :)
+0.7.7 * This is a total rewrite
 
-      * Everything is better now. It will be all right now with :)
+      * Everything is better now. Really. :)
 
       * Project hosted on libsmtp.berlios.de now
 
